k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test-deployment
  labels:
    app: k8s-test-deployment
spec:
  replicas: 2
  template:
    metadata:
      name: k8s-test-deployment
      labels:
        app: k8s-test-deployment
    spec:

      containers:
        - name: k8s-test-springboot
          image: avgdima/k8s-test-springboot:local
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
          livenessProbe:
             httpGet:
               port: 8080
               path: /actuator/health
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 500Mi

      restartPolicy: Always
  selector:
    matchLabels:
      app: k8s-test-deployment
