k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-service
  namespace: k8s-springboot-test
spec:
  selector:
    app: k8s-test-deployment
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
