k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-test-ingress
  namespace: k8s-springboot-test
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: augy.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-test-service
                port:
                  number: 8080
